@@ -120,6 +120,7 @@ wxStaticText *          O_WXEVTHANDLER
 wxStaticLine *          O_WXEVTHANDLER
 wxTextCtrl *            O_WXOBJECT
 wxTextCtrlBase *        O_WXOBJECT
+wxPropertySheetDialog * O_WXEVTHANDLER
 wxPlValidator *         O_WXOBJECT
 wxValidator *           O_WXOBJECT
 wxCheckBox *            O_WXEVTHANDLER
@@ -140,6 +141,7 @@ wxRadioBox *            O_WXEVTHANDLER
 wxScrollBar *           O_WXEVTHANDLER
 wxNotebook *            O_WXEVTHANDLER
 wxBookCtrl *            O_WXEVTHANDLER
+wxBookCtrlBase *        O_WXEVTHANDLER
 wxCheckListBox *        O_WXEVTHANDLER
 wxGauge *               O_WXEVTHANDLER
 wxBitmapButton *        O_WXEVTHANDLER
